simple-nginx/deploy.yml
---
####
#### Change this text 
#### and push this repo
#### to force a redeploy
####
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx
  namespace: simple-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-nginx
      name: simple-nginx
    spec:
      containers:
      - image: registry.digitalinfo.nl/generic/simple-nginx:stable
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        name: simple-nginx
        ports:
        - containerPort: 80
          name: html
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          periodSeconds: 15
          successThreshold: 2
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 400m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
          readOnly: true
      volumes:
      - name: html
        emptyDir: {}
