simple-nginx/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx
  namespace: simple-nginx
spec:
  ports:
  - name: simple-nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: simple-nginx
  type: ClusterIP
